tests/compile-fail/integration__integration__general__func_exported_string.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:26:9
   │
26 │         string foo() { return "hi"; }
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not supported by ANM files


